--- a/src/locales/hy/translation.json
+++ b/src/locales/hy/translation.json
@@ -1,9 +1,8 @@
 {
   "home": "Գլխավոր",
-  "services": "Ծառայություններ",
   "about": "Մեր մասին",
+  "services": "Ծառայություններ",
   "blog": "Բլոգ",
-  "pages": "Էջեր",
   "contact": "Կապ",
-  "team": "Թիմ"
+  "team": "Team"
 }
